Fixed header font size on mobile

--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -44,3 +44,13 @@
     text-transform: uppercase;
     font-size: 1.4rem;
 }
+
+@media all and (max-width: 899px) {
+    .site-header h1 {
+        font-size: 2rem;
+    }
+
+    .site-header nav li {
+        font-size: 1.2rem;
+    }
+}
